syntax = "proto3";
import "com/glance/analytics/spaces/client/api/zapp_content.proto";
import "com/glance/analytics/spaces/client/api/element_location.proto";

option java_multiple_files = true;
option java_package = "com.glance.analytics.spaces.client.api";

package com.glance.analytics.spaces.client.api;

message ContentAddress {
  ZappContentElement target_element = 1;
  ElementLocation element_location = 2;
}